# OpenTL

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  config.example.toml  defaults.go  deploy.sh  e2e_test.go  go.mod  install.sh  plan.md  pyproject.toml  telecoder.go  telecoder.service
_examples/minimal/: main.go
bot/: main.py  telecoder.py
channel/slack/: slack.go
cmd/opentl/: config.go  main.go  serve.go  status.go
cmd/telecoder/: config.go  list.go  logs.go  main.go  root.go  run.go  serve.go  status.go  stop.go
docker/: base.Dockerfile  compose.yml  deploy.sh  entrypoint.sh  server.Dockerfile  setup.sh
docs/: api-reference.md  architecture.md  deploy.md  design.md  getting-started.md  git-credentials.md  quickstart.md  reference.md  roadmap.md  runtime-setup.md  slack-setup.md  telegram-setup.md  troubleshooting.md  user-stories.md  vps-setup.md
e2e/: e2e_test.go
engine/: engine.go  engine_test.go
eventbus/: eventbus.go  eventbus_test.go
gitprovider/: gitprovider.go
gitprovider/github/: client.go  indexer.go  webhook.go
httpapi/: httpapi.go  httpapi_test.go
internal/config/: config.go  config_test.go
internal/engine/: engine.go  engine_test.go
internal/github/: client.go  client_test.go  indexer.go  webhook.go
internal/httpapi/: httpapi.go  httpapi_test.go  stubs_test.go
internal/orchestrator/: llm.go  (+2 more)
lib/: db.sh  sprint.sh
llm/: llm.go
model/: model.go  model_test.go  parse.go
notes/: acp-adoption.md
pipeline/: pipeline.go  pipeline_test.go  prompts.go
web/: index.html  package-lock.json  package.json
(+65 files in other folders)
