[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "telecoder"
version = "0.1.0"
description = "The simplest way to run a coding agent on your own VPS."
requires-python = ">=3.11"
dependencies = [
    "click>=8.1",
    "fastapi>=0.104",
    "uvicorn[standard]>=0.24",
    "jinja2>=3.1",
]

[project.scripts]
telecoder = "telecoder.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
